2006-09-03  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.

2006-09-02  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	* docs/sv/figures/*: Added screenshots.

2006-08-20  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in:
	- correct zone for Loveland (closes #335135)
	- commit mass removal of dead locations (closes #166014)

2006-08-07  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-applet.c: Call place_widgets() from update_finish() so that
	  in a vertical panel gweather applet redisplays properly. Patch from
	  Joshua Crawford <joshua_gordon_crawford@yahoo.com.au>. Closes
	  #325915.

2006-07-25  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Small update of French translation

2006-07-23  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: locations love. Patch from John N. Laliberte:
	  Closes #340421. Patch from Thierry Moisan.

2006-07-23  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Updated Swedish translation.
	
2006-07-11  Philip Langdale  <philipl@mail.utexas.edu>

	* gweather-pref.c: (temp_combo_changed_cb, speed_combo_changed_cb,
	pres_combo_changed_cb, dist_combo_changed_cb)
	Call gweather_dialog_update conditionally - the dialog doesn't
	exist if it's not displayed.

2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Added Swedish translation.
	
2006-06-27  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: split Congo into Democratic Republic of and
	  Republic of. Patch from Denis Jacquerye <moyogo@gmail.com>.
	  Closes #340712.

2006-05-29  Philip Langdale  <philipl@mail.utexas.edu>

	* gweather.h
	* gweather-applet.c: Remove dead code for managing lifetime of
	About Dialog. This is now done automatically by Gtk+.

	* gweather-applet.h: Remove declarations of non-existent functions.

2006-05-29  Philip Langdale  <philipl@mail.utexas.edu>
