@@ -1,3 +1,8 @@
+2006-10-02  Davyd Madeley  <davyd@madeley.id.au>
+
+	* gweather-pref.c: Stop the search of a location if the criterium is
+	empty (bug #358499). Patch from Esteban Sánchez <esteban@steve-0.com>.
+
 2006-09-03  Daniel Nylander <po@danielnylander.se>
 
 	* docs/sv/sv.po: Updated Swedish translation.
